--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>5.1.15</version>
     </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.13</version>
+        </dependency>
     </dependencies>
 
 </project>
